--- a/Navigation/Base.lproj/Main.storyboard
+++ b/Navigation/Base.lproj/Main.storyboard
@@ -24,36 +24,29 @@
             </objects>
             <point key="canvasLocation" x="-1146" y="100"/>
         </scene>
-        <!--View Controller-->
+        <!--Menú-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Navigation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xN1-E3-BdR">
-                                <rect key="frame" x="174" y="136" width="67" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button">
-                                    <color key="baseForegroundColor" systemColor="labelColor"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="li6-UW-jNX" kind="show" id="6Sl-mG-7YT"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="AMQ-A4-8Rz"/>
+                    <navigationItem key="navigationItem" title="Menú" id="AMQ-A4-8Rz">
+                        <barButtonItem key="rightBarButtonItem" title="Gris" id="hu2-YE-c0S">
+                            <connections>
+                                <segue destination="li6-UW-jNX" kind="show" id="aMm-f5-veb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-133" y="100"/>
         </scene>
-        <!--View Controller-->
+        <!--Gris-->
         <scene sceneID="dXh-1w-Et9">
             <objects>
                 <viewController id="li6-UW-jNX" sceneMemberID="viewController">
@@ -61,21 +54,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="Mrf-94-Kh0"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <navigationItem key="navigationItem" id="R57-vx-Yu9"/>
+                    <navigationItem key="navigationItem" title="Gris" id="R57-vx-Yu9">
+                        <barButtonItem key="backBarButtonItem" title="Menú" id="DQn-Ps-tE9"/>
+                        <barButtonItem key="rightBarButtonItem" title="Rosa" id="BRm-5E-nD6">
+                            <connections>
+                                <segue destination="H7d-MP-U39" kind="show" id="xdf-hk-ZUY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NzN-qM-95L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="694" y="103"/>
+            <point key="canvasLocation" x="692.75362318840587" y="102.45535714285714"/>
+        </scene>
+        <!--Rosa-->
+        <scene sceneID="Muc-4l-p0s">
+            <objects>
+                <viewController id="H7d-MP-U39" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WZi-Yb-lP5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="CEi-op-3tJ"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Rosa" id="20d-dj-lwv">
+                        <barButtonItem key="rightBarButtonItem" title="Plomo" id="Alj-H5-U22">
+                            <connections>
+                                <segue destination="ZLu-rh-E1i" kind="show" id="p7m-4C-Noo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nO4-eK-YjR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1460.8695652173915" y="101.78571428571428"/>
+        </scene>
+        <!--Plomo-->
+        <scene sceneID="f1h-pe-20Q">
+            <objects>
+                <viewController id="ZLu-rh-E1i" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="D9o-K4-bnj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Listo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0X-Nq-JIW">
+                                <rect key="frame" x="186" y="438" width="67" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cSa-fC-LF0"/>
+                        <color key="backgroundColor" systemColor="systemGrayColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Plomo" id="Vb9-Jc-cVY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f5m-0k-NvH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2332" y="102"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
