--- a/Navigation/Base.lproj/Main.storyboard
+++ b/Navigation/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XiA-T1-sJA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1146" y="100"/>
+            <point key="canvasLocation" x="-1329" y="102"/>
         </scene>
         <!--Menú-->
         <scene sceneID="tne-QT-ifu">
@@ -31,22 +31,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4g-rV-bPg">
+                                <rect key="frame" x="160" y="434" width="120" height="68"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Rosa">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="45"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="H7d-MP-U39" kind="show" id="USL-Jr-0r1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hVk-4D-4ZH">
+                                <rect key="frame" x="170" y="255" width="102" height="68"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Gris">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="45"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="li6-UW-jNX" kind="show" id="haZ-1l-bdK"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hDh-Lo-YAa">
+                                <rect key="frame" x="151" y="613" width="149" height="68"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Plomo">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="45"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="ZLu-rh-E1i" kind="show" id="ne5-Er-8zC"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Menú" id="AMQ-A4-8Rz">
-                        <barButtonItem key="rightBarButtonItem" title="Gris" id="hu2-YE-c0S">
-                            <connections>
-                                <segue destination="li6-UW-jNX" kind="show" id="aMm-f5-veb"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Menú" id="AMQ-A4-8Rz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-133" y="100"/>
+            <point key="canvasLocation" x="-162.31884057971016" y="101.78571428571428"/>
         </scene>
-        <!--Gris-->
+        <!--View Controller-->
         <scene sceneID="dXh-1w-Et9">
             <objects>
                 <viewController id="li6-UW-jNX" sceneMemberID="viewController">
@@ -56,20 +85,16 @@
                         <viewLayoutGuide key="safeArea" id="Mrf-94-Kh0"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Gris" id="R57-vx-Yu9">
+                    <navigationItem key="navigationItem" id="R57-vx-Yu9">
                         <barButtonItem key="backBarButtonItem" title="Menú" id="DQn-Ps-tE9"/>
-                        <barButtonItem key="rightBarButtonItem" title="Rosa" id="BRm-5E-nD6">
-                            <connections>
-                                <segue destination="H7d-MP-U39" kind="show" id="xdf-hk-ZUY"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" id="BRm-5E-nD6"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NzN-qM-95L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="692.75362318840587" y="102.45535714285714"/>
+            <point key="canvasLocation" x="1461" y="-656"/>
         </scene>
-        <!--Rosa-->
+        <!--View Controller-->
         <scene sceneID="Muc-4l-p0s">
             <objects>
                 <viewController id="H7d-MP-U39" sceneMemberID="viewController">
@@ -79,19 +104,15 @@
                         <viewLayoutGuide key="safeArea" id="CEi-op-3tJ"/>
                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Rosa" id="20d-dj-lwv">
-                        <barButtonItem key="rightBarButtonItem" title="Plomo" id="Alj-H5-U22">
-                            <connections>
-                                <segue destination="ZLu-rh-E1i" kind="show" id="p7m-4C-Noo"/>
-                            </connections>
-                        </barButtonItem>
+                    <navigationItem key="navigationItem" id="20d-dj-lwv">
+                        <barButtonItem key="rightBarButtonItem" id="Alj-H5-U22"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nO4-eK-YjR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1460.8695652173915" y="101.78571428571428"/>
         </scene>
-        <!--Plomo-->
+        <!--View Controller-->
         <scene sceneID="f1h-pe-20Q">
             <objects>
                 <viewController id="ZLu-rh-E1i" sceneMemberID="viewController">
@@ -110,11 +131,11 @@
                         <viewLayoutGuide key="safeArea" id="cSa-fC-LF0"/>
                         <color key="backgroundColor" systemColor="systemGrayColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Plomo" id="Vb9-Jc-cVY"/>
+                    <navigationItem key="navigationItem" id="Vb9-Jc-cVY"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f5m-0k-NvH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2332" y="102"/>
+            <point key="canvasLocation" x="1461" y="911"/>
         </scene>
     </scenes>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
